# mm-cxr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
configs/: README.md
configs/stage1/: densenet121.yaml  densenet201.yaml  vit_b_16.yaml  vit_b_32.yaml  vit_l_16.yaml
configs/stage2/: densenet121.yaml  densenet201.yaml  vit_b_16.yaml  vit_b_32.yaml  vit_l_16.yaml
mm_cxr_diag/: __init__.py  __main__.py
mm_cxr_diag/cli/: main.py
mm_cxr_diag/cli/commands/: evaluate.py  predict.py  prepare_data.py  serve.py  train.py
mm_cxr_diag/config/: __init__.py  settings.py
mm_cxr_diag/data/: __init__.py  dataloaders.py  dataset.py  labels.py  preprocessing.py
mm_cxr_diag/inference/: __init__.py  hierarchical.py  persistence.py  predictor.py  transforms.py
mm_cxr_diag/losses/: __init__.py  focal.py
mm_cxr_diag/models/: __init__.py  cxr_model.py  fusion.py  registry.py
mm_cxr_diag/models/backbones/: __init__.py  densenet.py  vit.py
mm_cxr_diag/service/: __init__.py  app.py  dependencies.py  routes.py  schemas.py
mm_cxr_diag/training/: __init__.py  evaluate.py  trainer.py
mm_cxr_diag/utils/: __init__.py  logging.py
tests/: conftest.py  test_cxr_model.py  test_dataloaders.py  test_dataset.py  test_focal_loss.py  test_preprocessing.py
tests/cli/: test_cli.py
tests/integration/: conftest.py  test_hierarchical.py  test_predictor.py  test_trainer_smoke.py
tests/service/: test_api.py
tests/unit/: test_config.py  test_registry.py
